AzureInfa/k8cluster_yaml/deployment.yaml
# Rest of your pipeline configuration
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-api-deployment
spec:
  replicas: 2  # Number of desired replicas
  selector:
    matchLabels:
      app: node-api
  template:
    metadata:
      labels:
        app: node-api
    spec:
      containers:
        - name: node-api-container
          image: newlookcontainerregistry.azurecr.io/newlook:latest 
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "0.5"  # Specify CPU limit
              memory: "256Mi"  # Specify memory limit
            requests:
              cpu: "0.1"  # Specify CPU request
              memory: "128Mi"  # Specify memory request
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
