AzureInfa/k8cluster_yaml/loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-api-loadbalancer
spec:
  selector:
    app: node-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
