AzureInfa/k8cluster_yaml/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-port-3000-only
spec:
  podSelector:
    matchLabels:
      app: node-api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: node-api
      ports:
        - protocol: TCP
          port: 3000
